src/objects/CaseSubmissionSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for custom Web2Case and LiveAgent pre-Chat code</description>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <inlineHelpText>Insert the Case RecordType ID in this field</inlineHelpText>
        <label>Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <description>The default Record Type for Contacts created in the external web submission process</description>
        <inlineHelpText>The default Record Type for Contacts created in the external web submission process</inlineHelpText>
        <label>Contact Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Support_Account_ID__c</fullName>
        <description>Default Account ID used for initially orphaned Contacts created from the Live Agent pre-Chat form</description>
        <inlineHelpText>Default Account ID used for initially orphaned Contacts created from the Live Agent pre-Chat form</inlineHelpText>
        <label>Default Support Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Support_Owner_ID__c</fullName>
        <description>Default User ID for Contacts created in the Live Agent pre-Chat form</description>
        <inlineHelpText>Default User ID for Contacts created in the Live Agent pre-Chat form</inlineHelpText>
        <label>Default Support Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_API_Request_URL__c</fullName>
        <label>Invalid API Request URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveAgent_Button_Name__c</fullName>
        <description>The Developer name of the LiveAgent Button used in this Case Submission Setting entry</description>
        <inlineHelpText>The Developer name of the LiveAgent Button used in this Case Submission Setting entry</inlineHelpText>
        <label>LiveAgent Button Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <description>Use the relative path of a Sites VF page with a preceeding slash &quot;/&quot;</description>
        <inlineHelpText>Use the relative path of a Sites VF page with a preceeding slash &quot;/&quot;</inlineHelpText>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Submission Settings</label>
</CustomObject>